[package]
name = "luther"
version = "0.1.0"
authors = ["Steven Bosnick <sbosnick@sympatico.ca>"]
description = "The runtime components of the Luther lexer generator."

[dependencies]
failure = "0.1.1"

[dev-dependencies]
assert_matches = "1.1.0"
quickcheck = "0.6.0"
lazy_static = "1.0.0"
regex = "0.2.5"
