[package]
name = "luther"
version = "0.1.0"
authors = ["Steven Bosnick <sbosnick@sympatico.ca>"]
description = "The runtime components of the Luther lexer generator."
repository = "https://github.com/sbosnick/luther"
readme = "README.md"
categories = ["development-tools", "parsing", "parser-implementation"]
keywords = ["lex", "lexer", "generator", "dfa", "tokenizer"]
license = "Apache-2.0/MIT"

[badges]
travis-ci = { repository = "sbosnick/luther" }
coveralls = { repository = "sbosnick/luther" }
maintenance = { status = "actively-developed" }

[dependencies]
failure = "0.1.1"
encode_unicode = "0.3.1"

[dev-dependencies]
assert_matches = "1.1.0"
quickcheck = "0.6.0"
lazy_static = "1.0.0"
regex = "0.2.5"

[workspace]
members = ["luther-derive"]
