[package]
name = "luther-derive"
version = "0.1.0"
authors = ["Steven Bosnick <sbosnick@sympatico.ca>"]

[lib]
proc-macro = true

[dependencies]
quote = "0.4"

[dependencies.syn]
version = "0.12"
features = ["visit"]

[dev-dependencies]
luther = {path = ".."}
assert_matches = "1.1.0"
failure = "0.1.1"
