[package]
name = "luther-derive"
version = "0.1.0"
authors = ["Steven Bosnick <sbosnick@sympatico.ca>"]
description = "The proc macro generator for the Luther lexer generator."
repository = "https://github.com/sbosnick/luther"
readme = "README.md"
categories = ["development-tools", "parsing", "parser-implementation"]
keywords = ["lex", "lexer", "generator", "dfa", "tokenizer"]
license = "Apache-2.0/MIT"

[badges]
travis-ci = { repository = "sbosnick/luther" }
coveralls = { repository = "sbosnick/luther" }
maintenance = { status = "actively-developed" }

[lib]
proc-macro = true

[dependencies]
quote = "0.4"
redfa = "0.0.2"
itertools = "0.7.6"

[dependencies.syn]
version = "0.12"
features = ["visit"]

[dev-dependencies]
luther = {version = "0.1.0", path = ".."}
assert_matches = "1.1.0"
failure = "0.1.1"
