[package]
name = "luther-redfa"
version = "0.1.0"
authors = ["Steven Bosnick <sbosnick@sympatico.ca>"]
description = "The Dfa construction components of the Luther lexer generator."
repository = "https://github.com/sbosnick/luther"
readme = "README.md"
categories = ["development-tools", "parsing", "parser-implementations"]
keywords = ["lex", "lexer", "generator", "dfa", "tokenizer"]
license = "Apache-2.0/MIT"

[badges]
travis-ci = { repository = "sbosnick/luther" }
coveralls = { repository = "sbosnick/luther" }
maintenance = { status = "actively-developed" }

[dependencies]
typed-arena = "1.4"

[dev-dependencies]
proptest = "0.8"
assert_matches = "1.3"
itertools = "0.7"
