[package]
authors = ["Steven Bosnick <sbosnick@sympatico.ca>"]
categories = ["development-tools", "parsing", "parser-implementations"]
description = "The Dfa construction components of the Luther lexer generator."
keywords = ["lex", "lexer", "generator", "dfa", "tokenizer"]
license = "Apache-2.0/MIT"
name = "luther-redfa"
readme = "README.md"
repository = "https://github.com/sbosnick/luther"
version = "0.1.0"

[badges.coveralls]
repository = "sbosnick/luther"

[badges.maintenance]
status = "actively-developed"

[badges.travis-ci]
repository = "sbosnick/luther"

[[bench]]
name = "basic_benchmark"
harness = false

[[bench]]
name = "regex_benchmark"
harness = false

[dependencies]
arrayvec = "0.4.7"
itertools = "0.7.8"
typed-arena = "1.4"
failure = "0.1.2"
regex-syntax = "0.6.2"

[dev-dependencies]
assert_matches = "1.3"
itertools = "0.7"
proptest = "0.8"
criterion = "0.2"
